avoid wrapping of table header

--- a/css/site.css
+++ b/css/site.css
@@ -2,6 +2,7 @@
 th {
     background-color: azure;
     color: black;
+    white-space: nowrap;
 }
 
 thead, tbody, tr, td, th {
